practice inner class and static nested class